[project]
name = "taddabbur-quranic-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "numpy>=2.3.4",
    "openai-agents>=0.4.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pinecone-client>=6.0.0",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "transformers>=4.57.1",
    "wavio>=0.0.9",
]
